force-app/main/default/objects/Technical_Request__c/fields/Vest_Garments_Select_Five_5__c.field-meta.xml
<CustomField>
    <fullName>Vest_Garments_Select_Five_5__c</fullName>
    <label>Vest Garments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chest Vest Extra Large (61-67 inches)</fullName>
            </value>
            <value>
                <fullName>Chest Vest Large (46-61 inches)</fullName>
            </value>
            <value>
                <fullName>Chest Vest Medium (35-46 inches)</fullName>
            </value>
            <value>
                <fullName>Chest Vest Small (28-35 inches)</fullName>
            </value>
            <value>
                <fullName>Full Vest Child Small (19-23 inches)</fullName>
            </value>
            <value>
                <fullName>Full Vest Child Small Short (19-23&quot;)</fullName>
            </value>
            <value>
                <fullName>Full Vest Child Medium (23-27 inches)</fullName>
            </value>
            <value>
                <fullName>Full Vest Child Large (27-31 inches)</fullName>
            </value>
            <value>
                <fullName>Full Vest Adult X Small Slim (27-31&quot;)</fullName>
            </value>
            <value>
                <fullName>Full Vest Adult Small (31-36 inches)</fullName>
            </value>
            <value>
                <fullName>Full Vest Adult Medium (36-45 inches)</fullName>
            </value>
            <value>
                <fullName>Full Vest Adult Large (45-52 inches)</fullName>
            </value>
            <value>
                <fullName>Wrap Vest Extra Small (19-23 inches)</fullName>
            </value>
            <value>
                <fullName>Wrap Vest Small (23-33 inches)</fullName>
            </value>
            <value>
                <fullName>Wrap Vest Medium (33-43 inches)</fullName>
            </value>
            <value>
                <fullName>Wrap Vest Large (43-53 inches)</fullName>
            </value>
            <value>
                <fullName>Wrap Vest Extra Large (53-67 inches)</fullName>
            </value>
            <value>
                <fullName>Wrap Vest XX Large (67-75 inches)</fullName>
            </value>
            <value>
                <fullName>Calming Black Child Small (19-23&quot;)</fullName>
            </value>
            <value>
                <fullName>Coastal Blue Child Small (19-23&quot;)</fullName>
            </value>
            <value>
                <fullName>Cashmere Rose Child Small (19-23&quot;)</fullName>
            </value>
            <value>
                <fullName>Color Me Purple Child Small (19-23&quot;)</fullName>
            </value>
            <value>
                <fullName>Cool Camo Child Small (19-23&quot;)</fullName>
            </value>
            <value>
                <fullName>Calming Black Child Med (23-27&quot;)</fullName>
            </value>
            <value>
                <fullName>Coastal Blue Child Med (23-27&quot;)</fullName>
            </value>
            <value>
                <fullName>Cashmere Rose Child Med (23-27&quot;)</fullName>
            </value>
            <value>
                <fullName>Color Me Purple Child Med (23-27&quot;)</fullName>
            </value>
            <value>
                <fullName>Cool Camo Child Med (23-27&quot;)</fullName>
            </value>
            <value>
                <fullName>Calming Black Child Large (27-31&quot;)</fullName>
            </value>
            <value>
                <fullName>Coastal Blue Child Large (27-31”)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>