force-app/main/default/objects/Technical_Request__c/fields/Vital_Cough_Accessory__c.field-meta.xml
<CustomField>
    <fullName>Vital_Cough_Accessory__c</fullName>
    <label>Vital Cough Accessory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Circuit - Infant</fullName>
            </value>
            <value>
                <fullName>Circuit - Child</fullName>
            </value>
            <value>
                <fullName>Circuit - Adult Regular</fullName>
            </value>
            <value>
                <fullName>Circuit - Adult Wide</fullName>
            </value>
            <value>
                <fullName>Circuit - Mouthpiece</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>