force-app/main/default/objects/Technical_Request__c/fields/What_day_did_the_evaluation_start__c.field-meta.xml
<CustomField>
    <fullName>What_day_did_the_evaluation_start__c</fullName>
    <label>What day did the evaluation start</label>
    <type>Date</type>
</CustomField>