force-app/main/default/objects/Technical_Request__c/fields/What_type_of__c.field-meta.xml
<CustomField>
    <fullName>What_type_of__c</fullName>
    <label>Type of equipment is being evaluated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Metaneb 4.0</fullName>
            </value>
            <value>
                <fullName>205 Vest</fullName>
            </value>
            <value>
                <fullName>Vitalcough</fullName>
            </value>
            <value>
                <fullName>Volara</fullName>
            </value>
            <value>
                <fullName>Life2000</fullName>
            </value>
            <value>
                <fullName>Synclara</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>