force-app/main/default/objects/Technical_Request__c/fields/What_type_of_contract_is_needed__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_contract_is_needed__c</fullName>
    <label>What type of contract is needed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DUP Amendment</fullName>
            </value>
            <value>
                <fullName>New DUP Contract</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Rental Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>