force-app/main/default/objects/Technical_Request__c/fields/Why_does_this_account_need_an_extension__c.field-meta.xml
<CustomField>
    <fullName>Why_does_this_account_need_an_extension__c</fullName>
    <label>Why does this account need an extension?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>