force-app/main/default/objects/Technical_Request__c/fields/Wrap_Vest__c.field-meta.xml
<CustomField>
    <fullName>Wrap_Vest__c</fullName>
    <label>Wrap Vest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>X Small (19 -23 inches)</fullName>
            </value>
            <value>
                <fullName>Small (23-33 inches)</fullName>
            </value>
            <value>
                <fullName>Medium (33-43 inches)</fullName>
            </value>
            <value>
                <fullName>Large (43-53 inches)</fullName>
            </value>
            <value>
                <fullName>X-Large (53-67 inches)</fullName>
            </value>
            <value>
                <fullName>XX-Large (67-72 inches)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>