force-app/main/default/objects/Technical_Request__c/fields/X2nd_equipment_to_be_on_contract__c.field-meta.xml
<CustomField>
    <fullName>X2nd_equipment_to_be_on_contract__c</fullName>
    <label>2nd equipment to be on contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Metaneb 4.0</fullName>
            </value>
            <value>
                <fullName>205 Vest System</fullName>
            </value>
            <value>
                <fullName>Volara</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>