force-app/main/default/objects/Technical_Request__c/fields/X2nd_type_of_equipment_to_be_quoted__c.field-meta.xml
<CustomField>
    <fullName>X2nd_type_of_equipment_to_be_quoted__c</fullName>
    <label>2nd type of equipment to be quoted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>104 Vest</fullName>
            </value>
            <value>
                <fullName>205 Vest</fullName>
            </value>
            <value>
                <fullName>Life2000 Vent &amp; Compressor</fullName>
            </value>
            <value>
                <fullName>Life2000</fullName>
                <label>Life2000 Vent Only</label>
            </value>
            <value>
                <fullName>Metaneb 4.0</fullName>
            </value>
            <value>
                <fullName>Synclara System</fullName>
            </value>
            <value>
                <fullName>VitalCough</fullName>
            </value>
            <value>
                <fullName>Volara System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>