force-app/main/default/objects/Technical_Request__c/fields/X5_Pack_of_Circuit_Pricing__c.field-meta.xml
<CustomField>
    <fullName>X5_Pack_of_Circuit_Pricing__c</fullName>
    <label>5 Pack of Circuit Pricing</label>
    <length>7</length>
    <type>Text</type>
</CustomField>