force-app/main/default/objects/Technical_Request__c/recordTypes/Account_Request.recordType-meta.xml
<RecordType>
    <fullName>Account_Request</fullName>
    <active>true</active>
    <description>Submit request to add or update an account</description>
    <label>Account Request</label>
</RecordType>