force-app/main/default/objects/Technical_Request__c/recordTypes/Capital_Protection_Request.recordType-meta.xml
<RecordType>
    <fullName>Capital_Protection_Request</fullName>
    <active>false</active>
    <description>ACS Expansion: Request for protection on MN deals in progress</description>
    <label>Capital Protection Request</label>
</RecordType>