force-app/main/default/objects/Technical_Request__c/recordTypes/Evaluation_Extension_Request.recordType-meta.xml
<RecordType>
    <fullName>Evaluation_Extension_Request</fullName>
    <active>true</active>
    <label>Evaluation Extension Request</label>
</RecordType>