force-app/main/default/objects/Technical_Request__c/recordTypes/RC_Technical_Request.recordType-meta.xml
<RecordType>
    <fullName>RC_Technical_Request</fullName>
    <active>false</active>
    <label>RC Technical Request</label>
</RecordType>