force-app/main/default/objects/Technical_Request__c/recordTypes/RH_Demo_Request.recordType-meta.xml
<RecordType>
    <fullName>RH_Demo_Request</fullName>
    <active>true</active>
    <label>RH Demo Request</label>
</RecordType>