force-app/main/default/objects/Technical_Request__c/recordTypes/RH_DUP_Request.recordType-meta.xml
<RecordType>
    <fullName>RH_DUP_Request</fullName>
    <active>true</active>
    <label>RH DUP Request</label>
</RecordType>