force-app/main/default/objects/Technical_Request__c/recordTypes/RH_Non_DUP_Pricing_Agreement.recordType-meta.xml
<RecordType>
    <fullName>RH_Non_DUP_Pricing_Agreement</fullName>
    <active>true</active>
    <description>Pricing Agreement Contract Request not affiliated with DUP</description>
    <label>RH Non DUP Pricing Agreement</label>
</RecordType>