force-app/main/default/objects/Technical_Request__c/recordTypes/RH_Proposal.recordType-meta.xml
<RecordType>
    <fullName>RH_Proposal</fullName>
    <active>true</active>
    <label>RH Proposal</label>
</RecordType>