force-app/main/default/objects/Technical_Request__c/recordTypes/RH_Technical_Request_for_HFCWO.recordType-meta.xml
<RecordType>
    <fullName>RH_Technical_Request_for_HFCWO</fullName>
    <active>true</active>
    <label>RH Technical Request for HFCWO</label>
</RecordType>