force-app/main/default/objects/Technical_Request__c/recordTypes/RH_Technical_Request_for_MIE.recordType-meta.xml
<RecordType>
    <fullName>RH_Technical_Request_for_MIE</fullName>
    <active>true</active>
    <label>RH Technical Request for MIE</label>
</RecordType>