force-app/main/default/objects/Technical_Request__c/recordTypes/RH_Technical_Request_for_NIV.recordType-meta.xml
<RecordType>
    <fullName>RH_Technical_Request_for_NIV</fullName>
    <active>true</active>
    <label>RH Technical Request for NIV</label>
</RecordType>