force-app/main/default/objects/Technical_Request__c/recordTypes/RH_Technical_Request_for_OLE.recordType-meta.xml
<RecordType>
    <fullName>RH_Technical_Request_for_OLE</fullName>
    <active>true</active>
    <label>RH Technical Request for OLE</label>
</RecordType>