force-app/main/default/objects/Technical_Request__c/recordTypes/RH_Trainer_Replacements.recordType-meta.xml
<RecordType>
    <fullName>RH_Trainer_Replacements</fullName>
    <active>true</active>
    <description>Created as a part of CR00032524</description>
    <label>RH Trainer Replacements</label>
</RecordType>