force-app/main/default/objects/Technical_Request__c/recordTypes/Sales_Support_Request.recordType-meta.xml
<RecordType>
    <fullName>Sales_Support_Request</fullName>
    <active>false</active>
    <description>Requests submitted by Account Executives to Sales Support</description>
    <label>Sales Support Request</label>
</RecordType>