force-app/main/default/objects/Technical_Request__c/listViews/All_Working_Requests.listView-meta.xml
<ListView>
    <fullName>All_Working_Requests</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Technical_Request__c.Sales_Support_Request</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Working</value>
    </filters>
    <label>All Working Requests</label>
    <sharedTo>
        <role>JDE_50002933</role>
        <role>JDE_50009645</role>
    </sharedTo>
</ListView>