force-app/main/default/objects/Technical_Request__c/listViews/Amy_L_Contracts_Requests_View.listView-meta.xml
<ListView>
    <fullName>Amy_L_Contracts_Requests_View</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Acute_Care_Account__c</columns>
    <columns>JDE_Number__c</columns>
    <columns>AVP_Approval__c</columns>
    <columns>Acute_Care_Approval__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Technical_Request__c.RH_DUP_Request,Technical_Request__c.RH_Non_DUP_Pricing_Agreement</value>
    </filters>
    <label>Amy L Contracts Requests View</label>
    <language>en_US</language>
    <sharedTo>
        <role>JDE_3460894</role>
        <role>JDE_3842554</role>
        <role>JDE_50002848</role>
    </sharedTo>
</ListView>