force-app/main/default/objects/Technical_Request__c/listViews/Denise_Open_Requests.listView-meta.xml
<ListView>
    <fullName>Denise_Open_Requests</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Patient_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Working,Complete,Discard</value>
    </filters>
    <filters>
        <field>X1st_type_of_equipment_to_be_quoted__c</field>
        <operation>equals</operation>
        <value>205 Vest</value>
    </filters>
    <label>ALL Open Requests</label>
</ListView>