force-app/main/default/objects/Technical_Request__c/listViews/HHA_Accounts_To_Create.listView-meta.xml
<ListView>
    <fullName>HHA_Accounts_To_Create</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Account_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Street_Address_1__c</columns>
    <columns>Street_Address_2__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Account_Phone_Number__c</columns>
    <columns>Fax_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <filters>
        <field>Type_of_Account__c</field>
        <operation>equals</operation>
        <value>HHA</value>
    </filters>
    <label>HHA Accounts To Create</label>
    <language>en_US</language>
    <sharedTo>
        <role>JDE_1008363</role>
    </sharedTo>
</ListView>