force-app/main/default/objects/Technical_Request__c/listViews/HRC_GLOBAL_SOURCING_STAFF_Technical_Request.listView-meta.xml
<ListView>
    <fullName>HRC_GLOBAL_SOURCING_STAFF_Technical_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>HRC-GLOBAL-SOURCING-STAFF</label>
    <queue>HRC_GLOBAL_SOURCING_STAFF</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>