force-app/main/default/objects/Technical_Request__c/listViews/MY_COMPLETED_HHA_REQUESTS.listView-meta.xml
<ListView>
    <fullName>MY_COMPLETED_HHA_REQUESTS</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Shipping_Address__c</columns>
    <columns>Type_of_Account__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Technical_Request__c.Account_Request</value>
    </filters>
    <label>MY COMPLETED HHA REQUESTS</label>
    <language>en_US</language>
    <sharedTo></sharedTo>
</ListView>